implement word-counter and display-result features

--- a/Simple-Word-Countor/index.html
+++ b/Simple-Word-Countor/index.html
@@ -2,8 +2,12 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Simple Word Counter</title>
 	</head>
 	<body>
+		<h1>Simple Word Counter</h1>
+		<textarea id="input_text" rows="5" cols="50"></textarea>
+		<p><span id="word_cnt">0</span>文字</p>
+		<script src="src.js" charset="utf-8"></script>
 	</body>
 </html>
