入力可能な文字数の表示と、制限を超過した際に文字色を変更する機能を実装

--- a/Simple-Word-Countor/index.html
+++ b/Simple-Word-Countor/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Simple Word Counter</h1>
 		<textarea id="input_text" rows="5" cols="50"></textarea>
-		<p><span id="word_cnt">0</span>文字</p>
+		<p id="word_cnt_wrap">残り<span id="word_cnt">0</span>文字入力可能</p>
 		<script src="src.js" charset="utf-8"></script>
 	</body>
 </html>
