--- a/SlideShow/index.html
+++ b/SlideShow/index.html
@@ -10,22 +10,21 @@
 			<div class="image_box">
 				<img id="main_image" src="images/image1.jpg">
 			</div>
-		</div>
 		<ul id="thumbnails">
-			<li><img src="images/image1.jpg" data-image="0" data-index="0" width="45" height="30"></li>
-			<li><img src="images/image2.jpg" data-image="0" data-index="0" width="45" height="30"></li>
-			<li><img src="images/image3.jpg" data-image="0" data-index="0" width="45" height="30"></li>
-			<li><img src="images/image4.jpg" data-image="0" data-index="0" width="45" height="30"></li>
-			<li><img src="images/image5.jpg" data-image="0" data-index="0" width="45" height="30"></li>
+			<li><img class="thumbnail_image" src="images/image1.jpg" data-image="0" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image2.jpg" data-image="0" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image3.jpg" data-image="0" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image4.jpg" data-image="0" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image5.jpg" data-image="0" data-index="0"></li>
 		</ul>
-
 		<div class="toolbar">
-			<div class="navi">
+			<div class="nav">
 				<div id="prev">＜＜</div>
 				<span id="page"></span>
 				<div id="next">＞＞</div>
 			</div>
 		</div>
+	</div>
 		<script src="main.js" charset="utf-8"></script>
 	</body>
 </html>
