--- a/SlideShow/index.html
+++ b/SlideShow/index.html
@@ -10,13 +10,15 @@
 			<div class="image_box">
 				<img id="main_image" src="images/image1.jpg">
 			</div>
+
 		<ul id="thumbnails">
-			<li><img class="thumbnail_image" src="images/image1.jpg" data-image="0" data-index="0"></li>
-			<li><img class="thumbnail_image" src="images/image2.jpg" data-image="0" data-index="0"></li>
-			<li><img class="thumbnail_image" src="images/image3.jpg" data-image="0" data-index="0"></li>
-			<li><img class="thumbnail_image" src="images/image4.jpg" data-image="0" data-index="0"></li>
-			<li><img class="thumbnail_image" src="images/image5.jpg" data-image="0" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image1.jpg" data-image="image1.jpg" data-index="0"></li>
+			<li><img class="thumbnail_image" src="images/image2.jpg" data-image="image2.jpg" data-index="1"></li>
+			<li><img class="thumbnail_image" src="images/image3.jpg" data-image="image3.jpg" data-index="2"></li>
+			<li><img class="thumbnail_image" src="images/image4.jpg" data-image="image4.jpg" data-index="3"></li>
+			<li><img class="thumbnail_image" src="images/image5.jpg" data-image="image5.jpg" data-index="4"></li>
 		</ul>
+
 		<div class="toolbar">
 			<div class="nav">
 				<div id="prev">＜＜</div>
