--- a/SlideShow/index.html
+++ b/SlideShow/index.html
@@ -12,11 +12,11 @@
 			</div>
 
 		<ul id="thumbnails">
-			<li><img class="thumbnail_image" src="images/image1.jpg" data-image="image1.jpg" data-index="0"></li>
+			<!-- <li><img class="thumbnail_image" src="images/image1.jpg" data-image="image1.jpg" data-index="0"></li>
 			<li><img class="thumbnail_image" src="images/image2.jpg" data-image="image2.jpg" data-index="1"></li>
 			<li><img class="thumbnail_image" src="images/image3.jpg" data-image="image3.jpg" data-index="2"></li>
 			<li><img class="thumbnail_image" src="images/image4.jpg" data-image="image4.jpg" data-index="3"></li>
-			<li><img class="thumbnail_image" src="images/image5.jpg" data-image="image5.jpg" data-index="4"></li>
+			<li><img class="thumbnail_image" src="images/image5.jpg" data-image="image5.jpg" data-index="4"></li> -->
 		</ul>
 
 		<div class="toolbar">
